--- a/pipeline/pyproject.toml
+++ b/pipeline/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "click>=8.1.7",
+    "fsspec>=2026.1.0",
     "pandas>=2.3.3",
     "psycopg2-binary>=2.9.11",
     "pyarrow>=22.0.0",
