encode .env variables
fix in docker compose

--- a/02_orchestration/docker-compose.yaml
+++ b/02_orchestration/docker-compose.yaml
@@ -76,10 +76,8 @@ services:
       - kestra_data:/app/storage
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp/kestra-wd:/tmp/kestra-wd
-      # Mount your service account JSON file securely 
-      - ./secrets/my_creds.json:/app/secrets/my_creds.json:ro
     env_file: 
-        - .env
+        - .env_encoded
     environment:
       KESTRA_CONFIGURATION: |
         datasources:
