--- a/02_orchestration/docker-compose.yaml
+++ b/02_orchestration/docker-compose.yaml
@@ -99,10 +99,16 @@ services:
               basePath: "/app/storage"
           queue:
             type: postgres
+          ai:
+            type: gemini
+            gemini:
+              model-name: gemini-2.5-flash  # Nested under gemini:
+              api-key: ${GEMINI_API_KEY}
           tasks:
             tmpDir:
               path: /tmp/kestra-wd/tmp
           url: http://localhost:8080/
+          
     ports:
       - "8080:8080"
       - "8081:8081"
