--- a/04_analytics_engineering/taxi_rides_ny/models/staging/sources.yml
+++ b/04_analytics_engineering/taxi_rides_ny/models/staging/sources.yml
@@ -1,11 +1,28 @@
 version: 2
 
 sources: 
-  - name: raw_data   # some name it according to WH it's from e.g. bigquery_sources/raw_data
-    description: raw data from bigquery
+  - name: raw_data          # some name it according to WH it's from e.g. bigquery_sources/raw_data
+    description: Raw data from bigquery.
     database: terraform-demo-485118
     schema: zoomcamp
 
     tables:
     - name: green_tripdata
+      description: Raw green taxi trip data.
+      columns:
+        - name: vendorid
+          description: |
+            A code indicating the taxi provider associated with the trip record.
+              1: 'Creative Mobile Technologies', 
+              2: 'VeriFone Inc',
+              4: 'Unknown Vendor'
+          data_type: integer
+          # for adding tags you want not in dbt
+          meta:  
+            pii: false      # is there Personally Identifiable Information in column?
+            ownership: data_team
+            importance: high
+            formatting: none
+
     - name: yellow_tripdata
+      description: Raw yellow taxi trip data
