reporting and fhv ingestion

--- a/04_analytics_engineering/taxi_rides_ny/models/staging/sources.yml
+++ b/04_analytics_engineering/taxi_rides_ny/models/staging/sources.yml
@@ -26,3 +26,6 @@ sources:
 
     - name: yellow_tripdata
       description: Raw yellow taxi trip data
+
+    - name: fhv_tripdata
+      description: Raw For-hire vehicle trip data
